--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,6 @@ description: "A new Flutter project."
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-
 version: 1.0.0+1
 
 environment:
@@ -18,6 +17,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.4
+  cached_network_image: ^3.4.1
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   dio: ^5.7.0
@@ -25,6 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.0.10+1
   get_it: ^8.0.2
 
 dev_dependencies:
@@ -37,7 +38,6 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
- 
   uses-material-design: true
   fonts:
     - family: Poppins
@@ -50,3 +50,8 @@ flutter:
           weight: 500
         - asset: assets/fonts/Poppins-Regular.ttf
           weight: 400
+
+flutter_assets:
+  assets_path: assets/icons/
+  output_path: lib/core/
+  filename: app_icons.dart
